[metadata]
name = refiner-cli
version = 0.0.2
description = Refiner CLI allows you to store text as vectors in Pinecone and then search for similar text. It uses OpenAI to generate embeddings and then uses Pinecone to store and search for similar text.
author = Alex Daro
author_email = gmx2267@gmail.com
url = https://github.com/AI-Refiner/refiner-cli

[options]
install_requires =
    refiner
    click

[options.entry_points]
console_scripts =
    refiner = cli:cli